<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loading_error_base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:visibility="gone"
    android:background="#eeeeee"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/loading_error_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:contentDescription="@string/img_content_desc"
        android:src="@drawable/ic_loading_error" />

    <TextView
        android:id="@+id/loading_error_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/loading_error_desc"
        android:textColor="#4D4D4D"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/loading_error_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_error_guide"
        android:textColor="#999999"
        android:textSize="14sp" />

</LinearLayout>