<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_bg"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/start_ad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/start_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="12dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_content_desc"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="18sp" />

            <View
                android:id="@+id/start_bottom_divider"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@drawable/background_topbar_divider"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/start_bottom_channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_content_desc"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/start_bottom_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/copy_right_info"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/fontsize_start_copyright" />
    </LinearLayout>

</LinearLayout>